Added integration test for bad request
